# client-mac/MacInterviewCopilot/Core/Networking/OpenAPIClient/OpenAPIClient/Classes/OpenAPIs/Models/AuthResponse.swift
@@ -1,0 +1,40 @@
+//
+// AuthResponse.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public struct AuthResponse: Codable, JSONEncodable, Hashable {
+
+    public var accessToken: String?
+    public var refreshToken: String?
+    public var user: UserProfile?
+
+    public init(accessToken: String? = nil, refreshToken: String? = nil, user: UserProfile? = nil) {
+        self.accessToken = accessToken
+        self.refreshToken = refreshToken
+        self.user = user
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case accessToken
+        case refreshToken
+        case user
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encodeIfPresent(accessToken, forKey: .accessToken)
+        try container.encodeIfPresent(refreshToken, forKey: .refreshToken)
+        try container.encodeIfPresent(user, forKey: .user)
+    }
+}
+
