# client-mac/MacInterviewCopilot/Core/Networking/OpenAPIClient/OpenAPIClient/Classes/OpenAPIs/Models/CodingStreamRequest.swift
@@ -1,0 +1,53 @@
+//
+// CodingStreamRequest.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public struct CodingStreamRequest: Codable, JSONEncodable, Hashable {
+
+    public var question: String
+    public var code: String
+    public var screenSnapshot: String?
+    public var provider: String?
+    public var sessionId: String?
+    /** Optional screenshot bytes */
+    public var screenContext: URL?
+
+    public init(question: String, code: String, screenSnapshot: String? = nil, provider: String? = nil, sessionId: String? = nil, screenContext: URL? = nil) {
+        self.question = question
+        self.code = code
+        self.screenSnapshot = screenSnapshot
+        self.provider = provider
+        self.sessionId = sessionId
+        self.screenContext = screenContext
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case question
+        case code
+        case screenSnapshot
+        case provider
+        case sessionId
+        case screenContext
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encode(question, forKey: .question)
+        try container.encode(code, forKey: .code)
+        try container.encodeIfPresent(screenSnapshot, forKey: .screenSnapshot)
+        try container.encodeIfPresent(provider, forKey: .provider)
+        try container.encodeIfPresent(sessionId, forKey: .sessionId)
+        try container.encodeIfPresent(screenContext, forKey: .screenContext)
+    }
+}
+
