# client-mac/MacInterviewCopilot/Core/Networking/OpenAPIClient/OpenAPIClient/Classes/OpenAPIs/Models/Session.swift
@@ -1,0 +1,59 @@
+//
+// Session.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public struct Session: Codable, JSONEncodable, Hashable {
+
+    public enum ModelType: String, Codable, CaseIterable {
+        case behavioral = "behavioral"
+        case coding = "coding"
+    }
+    public var id: String?
+    public var userId: String?
+    public var title: String?
+    public var type: ModelType?
+    public var status: String?
+    public var createdAt: String?
+
+    public init(id: String? = nil, userId: String? = nil, title: String? = nil, type: ModelType? = nil, status: String? = nil, createdAt: String? = nil) {
+        self.id = id
+        self.userId = userId
+        self.title = title
+        self.type = type
+        self.status = status
+        self.createdAt = createdAt
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case id
+        case userId
+        case title
+        case type
+        case status
+        case createdAt
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encodeIfPresent(id, forKey: .id)
+        try container.encodeIfPresent(userId, forKey: .userId)
+        try container.encodeIfPresent(title, forKey: .title)
+        try container.encodeIfPresent(type, forKey: .type)
+        try container.encodeIfPresent(status, forKey: .status)
+        try container.encodeIfPresent(createdAt, forKey: .createdAt)
+    }
+}
+
+
+@available(iOS 13, tvOS 13, watchOS 6, macOS 10.15, *)
+extension Session: Identifiable {}
