# client-mac/MacInterviewCopilot/Core/Networking/OpenAPIClient/OpenAPIClient/Classes/OpenAPIs/Models/SessionsIdMessagesGet200ResponseInner.swift
@@ -1,0 +1,47 @@
+//
+// SessionsIdMessagesGet200ResponseInner.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public struct SessionsIdMessagesGet200ResponseInner: Codable, JSONEncodable, Hashable {
+
+    public var id: String?
+    public var role: String?
+    public var content: String?
+    public var createdAt: String?
+
+    public init(id: String? = nil, role: String? = nil, content: String? = nil, createdAt: String? = nil) {
+        self.id = id
+        self.role = role
+        self.content = content
+        self.createdAt = createdAt
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case id
+        case role
+        case content
+        case createdAt
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encodeIfPresent(id, forKey: .id)
+        try container.encodeIfPresent(role, forKey: .role)
+        try container.encodeIfPresent(content, forKey: .content)
+        try container.encodeIfPresent(createdAt, forKey: .createdAt)
+    }
+}
+
+
+@available(iOS 13, tvOS 13, watchOS 6, macOS 10.15, *)
+extension SessionsIdMessagesGet200ResponseInner: Identifiable {}
